--- a/site/Module-3-solution/index.html
+++ b/site/Module-3-solution/index.html
@@ -54,8 +54,8 @@
   <div class="container">
   	<div class="row">
   		<div id="c-s" clas="col-xs-12 col-sm-12 col-md-12">
-  			<div class="square"><h2>Chicken</h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+  			<div class="square"><h2>Chicken</h2>
+        Esto es una prueba 20/10/2020 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
   			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
   			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
   			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
